# parse_feedback_in_foxtrot

./: README.md  parser.py  pyproject.toml  requirements.txt
helpers/: base_url.py  categories.py  products.py  subcategories.py
reviews/Захисні плівки і скло для смартфонів/: Захисне скло ColorWay для Xiaomi Redmi Note 9 Black (CW-GSFGXRN9-BK).json  Захисне скло DENGOS Tempered Glass Full Glue Xiaomi Redmi Note 8 Pro Black (TGFG-84).json
reviews/Карти пам'яті/: Карта пам'яті APACER microSDHC 32 Gb UHS-I U1+adapter (AP32GMCSH10U1-R).json  Карта пам'яті APACER microSDHC 32GB UHS-I U1 (AP32GMCSH10U5-R).json  Карта пам'яті KINGSTON microSDHC 32Gb Canvas Select+ A1 UHS-I (U1) (SDCS2_32GB).json
reviews/Морозильні камери/: Морозильна камера ALTUS ALTF250W.json  Морозильна камера ALTUS ALTF312NS.json  Морозильна камера ALTUS ALTF312NW.json
reviews/Посудомийні машини/: Посудомийна машина HOTPOINT ARISTON HFC 3C41 CW X.json  Посудомийна машина WHIRLPOOL WRFC 3C26.json  Посудомийна машина WHIRLPOOL WSFO3O23PF.json
reviews/Холодильники/: Холодильник INDESIT INFC8 TI21X 0.json  Холодильник SAMSUNG RB38T676FEL_UA.json  Холодильник SAMSUNG RB38T676FSA_UA.json
reviews/Чохли для смартфонів/: Чохол ARMORSTANDART Air Series для Samsung Galaxy A41 (A415) Transparent (ARM56503).json  Чохол COLORWAY Smart Matte для Xiaomi Redmi 9 (CW-CSMXR9-BK).json  Чохол DENGOS Carbon для Samsung Galaxy A31 Black (DG-TPU-CRBN-62).json
