[tool.poetry]
name = "parse-feedback-in-foxtrot"
version = "0.1.0"
description = ""
authors = ["alex_kondr <alex_kondr@outlook.com>"]
readme = "README.md"
packages = [{include = "parse_feedback_in_foxtrot"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
